chore: remove unsupported AI agent configurations
Remove Cursor, Continue.dev, and GitHub Copilot configuration files
since these agents are planned for future support but not currently
implemented.

Per TODO.md, the repository is "Currently focused on Claude Code only"
with other AI agents (Cursor, Continue.dev, GitHub Copilot, etc.)
planned for future releases.

Files removed:
- .cursor/ directory
- .continue/ directory
- .continuerules file
- .github/copilot-instructions.md file

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,11 @@ env/
 *.swo
 *~
 
+# AI agents (only Claude Code is currently supported)
+.cursor/
+.continue/
+.continuerules
+
 # Testing
 .pytest_cache/
 .coverage
